So many unfinished stuffs too lazy to continue for now... The hover and mouse press is the only working...

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="libraries/p5.sound.min.js"></script> -->
 
     <script src="js/sketch.js"></script>
+    <script src="js/cell.js"></script>
 </head>
 <body>
 
